codegen/tests/snapshots/codegen__x86_64__add.snap
---
source: codegen/tests/codegen.rs
assertion_line: 24
expression: mach_module.display_asm()
---
  .text
  .intel_syntax noprefix
  .text
  .globl main
main:
.LBL0_0:
  push rbp
  mov rbp, rsp
  sub rsp, 32
  mov dword ptr [rbp-4], 0
  mov dword ptr [rbp-20], 0
  mov dword ptr [rbp-16], 1
  mov dword ptr [rbp-12], 2
  mov dword ptr [rbp-8], 3
  mov eax, 0
  add rsp, 32
  pop rbp
  ret 

