codegen/tests/snapshots/codegen__x86_64__br.snap
---
source: codegen/tests/codegen.rs
assertion_line: 29
expression: mach_module.display_asm()
---
  .text
  .intel_syntax noprefix
  .text
  .globl main
main:
.LBL0_0:
  push rbp
  mov rbp, rsp
  sub rsp, 16
  mov dword ptr [rbp-4], 2
  jmp .LBL0_1
.LBL0_1:
  mov eax, dword ptr [rbp-4]
  add rsp, 16
  pop rbp
  ret 

