codegen/tests/snapshots/codegen__x86_64__spill.snap
---
source: codegen/tests/codegen.rs
assertion_line: 44
expression: mach_module.display_asm()
---
  .text
  .intel_syntax noprefix
  .text
  .globl main
main:
.LBL0_0:
  push rbp
  push r15
  push r14
  push r13
  push r12
  push rbx
  mov rbp, rsp
  sub rsp, 136
  mov dword ptr [rbp-4], 1
  mov dword ptr [rbp-8], 2
  mov dword ptr [rbp-12], 3
  mov dword ptr [rbp-16], 4
  mov dword ptr [rbp-20], 5
  mov dword ptr [rbp-24], 6
  mov dword ptr [rbp-28], 7
  mov dword ptr [rbp-32], 8
  mov dword ptr [rbp-36], 9
  mov dword ptr [rbp-40], 10
  mov dword ptr [rbp-44], 11
  mov dword ptr [rbp-48], 12
  mov dword ptr [rbp-52], 13
  mov dword ptr [rbp-56], 14
  mov dword ptr [rbp-60], 15
  mov dword ptr [rbp-64], 16
  mov dword ptr [rbp-68], 17
  mov dword ptr [rbp-72], 18
  mov dword ptr [rbp-76], 19
  mov dword ptr [rbp-80], 20
  mov eax, dword ptr [rbp-4]
  mov ecx, dword ptr [rbp-8]
  mov edx, dword ptr [rbp-12]
  mov edi, dword ptr [rbp-16]
  mov esi, dword ptr [rbp-20]
  mov ebx, dword ptr [rbp-24]
  mov r12d, dword ptr [rbp-28]
  mov r13d, dword ptr [rbp-32]
  mov r14d, dword ptr [rbp-36]
  mov r15d, dword ptr [rbp-40]
  mov dword ptr [rbp-84], r15d
  mov r15d, dword ptr [rbp-44]
  mov dword ptr [rbp-88], r15d
  mov r15d, dword ptr [rbp-48]
  mov dword ptr [rbp-92], r15d
  mov r15d, dword ptr [rbp-52]
  mov dword ptr [rbp-96], r15d
  mov r15d, dword ptr [rbp-56]
  mov dword ptr [rbp-100], r15d
  mov r15d, dword ptr [rbp-60]
  mov dword ptr [rbp-104], r15d
  mov r15d, dword ptr [rbp-64]
  mov dword ptr [rbp-108], r15d
  mov r15d, dword ptr [rbp-68]
  mov dword ptr [rbp-112], r15d
  mov r15d, dword ptr [rbp-72]
  mov dword ptr [rbp-116], r15d
  mov r15d, dword ptr [rbp-76]
  mov dword ptr [rbp-120], r15d
  mov r15d, dword ptr [rbp-80]
  mov dword ptr [rbp-124], r15d
  add eax, ecx
  add eax, edx
  add eax, edi
  add eax, esi
  add eax, ebx
  add eax, r12d
  add eax, r13d
  add eax, r14d
  mov ecx, dword ptr [rbp-84]
  add eax, ecx
  mov ecx, dword ptr [rbp-88]
  add eax, ecx
  mov ecx, dword ptr [rbp-92]
  add eax, ecx
  mov ecx, dword ptr [rbp-96]
  add eax, ecx
  mov ecx, dword ptr [rbp-100]
  add eax, ecx
  mov ecx, dword ptr [rbp-104]
  add eax, ecx
  mov ecx, dword ptr [rbp-108]
  add eax, ecx
  mov ecx, dword ptr [rbp-112]
  add eax, ecx
  mov ecx, dword ptr [rbp-116]
  add eax, ecx
  mov ecx, dword ptr [rbp-120]
  add eax, ecx
  mov ecx, dword ptr [rbp-124]
  add eax, ecx
  add rsp, 136
  pop rbx
  pop r12
  pop r13
  pop r14
  pop r15
  pop rbp
  ret 

